# xdre

./: .gitignore  Makefile.am  README  bootstrap  configure.ac
codeblocks/: BruteDialog.wxs  MainWindow.wxs  Makefile.am
src/: BruteDialog.cpp  BruteDialog.hpp  GuiWx.cpp  GuiWx.hpp  MainWindow.cpp  MainWindow.hpp  Makefile.am  TiclistCtrl.cpp  TiclistCtrl.hpp  cstuff.c  cstuff.h  main.cpp  xdre.cpp  xdre.hpp
src/prboom-plus/data/: Makefile.am
src/prboom-plus/src/: Makefile.am  d_client.c  d_main.c  doomstat.h  e6y.c  g_game.c  g_game.h  hu_tracers.c  lprintf.c  m_misc.c  p_map.c  p_saveg.c  p_saveg.h  p_spec.c  r_fps.c  r_main.h
src/prboom-plus/src/SDL/: i_main.c  i_system.c  i_video.c
